# backend/src/domain/pullRequestArticle.ts
@@ -1,11 +1,25 @@
 import type { PullRequest } from "./pullRequest.js";
 
-export type PullRequestArticle = PullRequest & {
+export type ArticleContent = {
 	aiGeneratedTitle: string;
 	backgroundAndPurpose?: string;
-	mainChanges?: string;
-	notablePoints?: string;
+	mainChanges?: {
+		fileName: string;
+		changeTypes: string[];
+		description: string;
+	}[];
+	notablePoints?: {
+		categories: string[];
+		point: string;
+	}[];
 	summaryGeneratedAt: string;
+	likeCount: number;
+};
+
+export type PullRequestArticle = PullRequest & {
+	contents?: Record<string, ArticleContent>;
+	createdAt?: string;
+	updatedAt?: string;
 };
 
 export const createPullRequestArticle = (
